--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <body>
       <table cellspacing="20">
          <tr>
-            <td><img src="D:\Learning To Code\Web Developement (Udemy)\HTML - Personal Site\images\photo.jpg" alt="upinder's profile pic" height="200px" width="150px"></td>
+            <td><img src="images\photo.jpg" alt="upinder's profile pic" height="200px" width="150px"></td>
             <td>
 
                <h1>Upinder Singh Sangha</h1>
